// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display bubbles 1`] = `
<Bubble
  r={45}
  x={-10}
  y={52.3015873015873}
>
  <circle
    className="bubble-chart-bubble"
    r={45}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-10, 52.3015873015873)"
  />
</Bubble>
`;

exports[`should display bubbles 2`] = `
<Bubble
  r={33.57142857142857}
  x={-75}
  y={33.57142857142857}
>
  <circle
    className="bubble-chart-bubble"
    r={33.57142857142857}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-75, 33.57142857142857)"
  />
</Bubble>
`;

exports[`should render bubble links 1`] = `
<Bubble
  link="foo"
  r={45}
  x={-10}
  y={52.3015873015873}
>
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
    to="foo"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <circle
        className="bubble-chart-bubble"
        r={45}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(-10, 52.3015873015873)"
      />
    </a>
  </Link>
</Bubble>
`;

exports[`should render bubble links 2`] = `
<Bubble
  link="bar"
  r={33.57142857142857}
  x={-75}
  y={33.57142857142857}
>
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
    to="bar"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      <circle
        className="bubble-chart-bubble"
        r={33.57142857142857}
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        transform="translate(-75, 33.57142857142857)"
      />
    </a>
  </Link>
</Bubble>
`;

exports[`should render bubbles with click handlers 1`] = `
<Bubble
  link="foo"
  onClick={[Function]}
  r={45}
  x={-10}
  y={52.3015873015873}
>
  <circle
    className="bubble-chart-bubble"
    onClick={[Function]}
    r={45}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-10, 52.3015873015873)"
  />
</Bubble>
`;

exports[`should render bubbles with click handlers 2`] = `
<Bubble
  link="bar"
  onClick={[Function]}
  r={33.57142857142857}
  x={-75}
  y={33.57142857142857}
>
  <circle
    className="bubble-chart-bubble"
    onClick={[Function]}
    r={33.57142857142857}
    style={
      Object {
        "fill": undefined,
        "stroke": undefined,
      }
    }
    transform="translate(-75, 33.57142857142857)"
  />
</Bubble>
`;
